# django-money

./: .gitignore  mypy.ini  pyproject.toml  setup.cfg  setup.py
djmoney/: __init__.py  money.py  utils.py
djmoney/contrib/exchange/: models.py
djmoney/contrib/exchange/backends/: base.py
djmoney/contrib/exchange/management/commands/: clear_rates.py  update_rates.py
djmoney/forms/: fields.py
djmoney/models/: fields.py  managers.py
djmoney/templatetags/: djmoney.py
tests/: test_managers.py  test_models.py
tests/contrib/exchange/: test_commands.py  test_model.py
